prevent labels from overflowing

--- a/app/assets/stylesheets/content/_forms.sass
+++ b/app/assets/stylesheets/content/_forms.sass
@@ -42,6 +42,8 @@ $form--field-types: (text-field, text-area, select, check-box, range-field, sear
   text-align: left
   font-weight: normal
   vertical-align: middle
+  text-overflow: ellipsis
+  overflow: hidden
 
 // A general CSS class to be applied to forms using the above defined form style.
 // We can't define this on form itself as this would break a lot of existing forms.
